fix(rgbpplist): extra padding when mobile remove

--- a/src/pages/RGBPP/TransactionList/List/styles.module.scss
+++ b/src/pages/RGBPP/TransactionList/List/styles.module.scss
@@ -92,8 +92,6 @@
   }
 
   @media (width <= $mobileBreakPoint) {
-    padding: 16px;
-
     table {
       thead {
         display: none;
